clusters/sirius/apps/homer-outer/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: homer-outer
    app.kubernetes.io/name: homer-outer
    app.kubernetes.io/service: homer-outer
  name: homer-outer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: homer-outer
    app.kubernetes.io/name: homer-outer
  type: ClusterIP
