clusters/sirius/apps/homer-outer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-outer-external
  labels:
    app.kubernetes.io/instance: homer-outer
    app.kubernetes.io/name: homer-outer
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - homer.moonblade.work
    - moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer-outer
          port: 8080
