clusters/sirius/apps/homer-outer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "moonblade.work"
spec:
  rules:
  - host: moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer-outer
            port:
              name: http
